# CHPS0731

./: .gitignore  CMakeLists.txt  Doxyfile  GeometricModel.cpp  GeometricModel.h  Makefile  OBJLoader.cpp  OBJLoader.h  README.md  bounding_box.cpp  build.sh  camera.cpp  camera.h  clean.sh  config.json  image.cpp  image.h  intersection.cpp  intersection.h  job.sh  light.cpp  light.h  main.cpp  makefile  material.h  mesh.cpp  mesh.h  objet.h  perlin.cpp  phong.cpp  phong.h  phong.hpp  plan.cpp  plan.hpp  plan_light.cpp  plan_light.h  post_process.cpp  post_process.h  rayon.cpp  rayon.h  (+9 more)
Camera/: camera.cpp  camera.h  rayon.cpp  rayon.h  scene.cpp  scene.h
Configuration/: configuration.cpp  configuration.h  json.hpp
DeSerializer/: deserializer.cpp  deserializer.h
DesignPatterns/: factory.h
DesignPatterns/LightsFactory/: plan_light_factory.cpp  plan_light_factory.h
DesignPatterns/ObjectsFactory/: mesh_factory.cpp  mesh_factory.h  plans_factory.cpp  plans_factory.h  sphere_factory.cpp  sphere_factory.h
Effects/: effect.h  histogram_equaliser_cv.cpp  histogram_equaliser_cv.h  post_process.cpp  post_process.h
Image/: base_image.cpp  base_image.h  image.cpp  image.h  image_cv.cpp  image_cv.h  image_glm.cpp  image_glm.h
Interfaces/: from_json.cpp  from_json.h  to_json.cpp  to_json.h
Lights/: light.cpp  light.h  plan_light.cpp  plan_light.h
Materials/: material.cpp  material.h  perlin.cpp  perlin.h  phong.cpp  phong.h  texture.cpp  texture.h
Objects/: objet.cpp  objet.h  plan.cpp  plan.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.h
Objects/Mesh/: GeometricModel.cpp  GeometricModel.h  OBJLoader.cpp  OBJLoader.h  bounding_box.cpp  bounding_box.h  mesh.cpp  mesh.h
Tests/: catch_trick.cpp  test.json  tests_config.cpp
Transformer/: gl_mto_cv.cpp  gl_mto_cv.h
Tree/: k_dnode.cpp  k_dnode.h  k_dtree.cpp  k_dtree.h  kd_tree_iterator.cpp  kd_tree_iterator.h
png/: lodepng.cpp  lodepng.h
